Bug 149202 - MalformedVersionException with Zotero plugin - plus sign in Java version apparently breaks
Summary: MalformedVersionException with Zotero plugin - plus sign in Java version appa...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.3.3.2 release
Hardware: x86-64 (AMD64) macOS (All)
: medium normal
Assignee: Stephan Bergmann
URL:
Whiteboard: target:7.3.5 target:7.3.4
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-20 13:22 UTC by dmwoodruff
Modified: 2022-05-24 09:38 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dmwoodruff 2022-05-20 13:22:43 UTC
Description:
This is beyond me technically but please see chat below: 
Guest63 10:19:53
Hello -- anyone out there good with plugins? I'm trying to use the Zotero plugin and it's non responsive. I've tried a lot of stuff with no success https://forums.zotero.org/discussion/97282/libreoffice-plugin-problem

→ Guest63 has joined
G
Guest63 14:02:17
Asked this earlier but had to step away,  so apologies if I missed an earlier reply: Hello -- anyone out there good with plugins? I'm trying to use the Zotero plugin and it's non responsive. I've tried a lot of stuff with no success https://forums.zotero.org/discussion/97282/libreoffice-plugin-problem

(com.sun.star.uno.RuntimeException) { { Message = "C++ code threw N10jfw_plugin25MalformedVersionExceptionE: std::exception", Context = (com.sun.star.uno.XInterface) @0 } }

→ vodkra has joined
M
@mikekaganski 14:07:57
Guest63: "MalformedVersionException is for "if the version string was not recognized"
Guest63: what 'java -version' shows to you?
G
Guest63 14:08:30
Thanks -- does that mean there's a version problem in the plugin from Zotero?
M
@mikekaganski 14:08:59
Guest63: no, it is a problem in LibreOffice trying to run Java
G
Guest63 14:09:21
java version "18.0.1.1" 2022-04-22
Java(TM) SE Runtime Environment (build 18.0.1.1+2-6)
Java HotSpot(TM) 64-Bit Server VM (build 18.0.1.1+2-6, mixed mode, sharing)
M
@mikekaganski 14:09:30
aha
https://opengrok.libreoffice.org/xref/core/jvmfwk/plugins/sunmajor/pluginlib/sunjre.cxx?r=3068ab9a#9...
https://opengrok.libreoffice.org/xref/core/jvmfwk/plugins/sunmajor/pluginlib/sunversion.cxx?r=8e6462...
It can't handle the +
Guest63: try another Java version, I'd suggest something like Java 8 by Oracle
G
Guest63 14:10:56
Java 8 -- thanks, I will try that
17 also didn't work

Steps to Reproduce:
1.Try to Install Zotero plugin
https://github.com/zotero/zotero-libreoffice-integration/blob/master/install/Zotero_OpenOffice_Integration.oxt
That's all.

Actual Results:
(com.sun.star.uno.RuntimeException) { { Message = "C++ code threw N10jfw_plugin25MalformedVersionExceptionE: std::exception", Context = (com.sun.star.uno.XInterface) @0 } }
Zotero plugin unresponsive

Expected Results:
Zotero plugin would work


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Tried with several versions of LibreOffice, including most recent stable.

Dunno on OpenGl, didn't modify
Comment 1 Stephan Bergmann 2022-05-23 11:43:07 UTC
I can reproduce this with <https://download.java.net/java/GA/jdk18.0.1.1/65ae32619e2f40f3a9af3af1851d6e19/2/GPL/openjdk-18.0.1.1_macos-aarch64_bin.tar.gz> as available at <https://jdk.java.net/18/> "OpenJDK JDK 18.0.1.1 General-Availability Release".
Comment 2 Commit Notification 2022-05-24 07:56:46 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/6d1b32befcaaa1f61a4879a5dcd04289f6b95f96

tdf#149202 Allow for java.version consisting of four dotted segments

It will be available in 7.3.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-05-24 09:38:34 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-7-3-4":

https://git.libreoffice.org/core/commit/ad4983fd26ffc52e6c47ef857907e79b3bd6853b

tdf#149202 Allow for java.version consisting of four dotted segments

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.